add constant support

--- a/sjzd/index.html
+++ b/sjzd/index.html
@@ -142,6 +142,12 @@
           </div>
 
           <div id="detail_constant" class="hero-unit" style="padding:20px; display:none;">
+                <h3 id="title_constant"></h3>
+                <div id="fields_constant"></div>
+                <div>
+                    <input style="margin-left:145px;" type="button" class="btn" onclick="do_save()" value="保存" />
+                    <span id="info_constant" style="color:#ff0000"></span>
+                </div>
           </div>
 
         </div><!--/span-->
